projects/examples/source/02.04.04.cpp
////////////////////////////////////////////////////////////////

#include <cassert>

////////////////////////////////////////////////////////////////

// auto   make_dangling_v1() { auto x = 1; return &x; } // error

// auto & make_dangling_v2() { auto x = 1; return  x; } // error

////////////////////////////////////////////////////////////////

auto const & iota()
{
	static auto x = 0; // support : compiler-explorer.com

	return ++x;
}

////////////////////////////////////////////////////////////////

int main()
{
//  assert(*make_dangling_v1() == 1); // error

//	assert( make_dangling_v2() == 1); // error

//  ------------------------------------------

    assert(iota() == 1);

    assert(iota() == 2);

    assert(iota() == 3);
}

////////////////////////////////////////////////////////////////